c2rust-transpile/tests/snapshots/snapshots__transpile@insertion.c.2024.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/insertion.2024.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
#[unsafe(no_mangle)]
pub unsafe extern "C" fn insertion_sort(n: ::core::ffi::c_int, p: *mut ::core::ffi::c_int) {
    let mut i: ::core::ffi::c_int = 1 as ::core::ffi::c_int;
    while i < n {
        let tmp: ::core::ffi::c_int = *p.offset(i as isize);
        let mut j: ::core::ffi::c_int = i;
        while j > 0 as ::core::ffi::c_int && *p.offset((j - 1 as ::core::ffi::c_int) as isize) > tmp
        {
            *p.offset(j as isize) = *p.offset((j - 1 as ::core::ffi::c_int) as isize);
            j -= 1;
        }
        *p.offset(j as isize) = tmp;
        i += 1;
    }
}
