c2rust-transpile/tests/snapshots/snapshots__transpile@irreducible.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/irreducible.rs
input_file: c2rust-transpile/tests/snapshots/irreducible.c
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#[no_mangle]
pub unsafe extern "C" fn irreducible(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    let mut current_block: u64;
    's_36: loop {
        if x < 6 as ::core::ffi::c_int {
            x += 1 as ::core::ffi::c_int;
            current_block = 11006884313001856693;
        } else {
            current_block = 7005012182606106737;
        }
        loop {
            match current_block {
                7005012182606106737 => {
                    if x < 9 as ::core::ffi::c_int {
                        break;
                    } else {
                        current_block = 11006884313001856693;
                    }
                }
                _ => {
                    if !(x < 20 as ::core::ffi::c_int) {
                        break 's_36;
                    }
                    x += 90 as ::core::ffi::c_int;
                    current_block = 7005012182606106737;
                }
            }
        }
        x += 2 as ::core::ffi::c_int;
    }
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn jump_to_irreducible(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    let mut current_block: u64;
    '_b: {
        match x {
            0 => {
                if x != 0 {
                    current_block = 197541242141302941;
                    break '_b;
                }
            }
            1 => {
                if x != 0 {
                    current_block = 3760217419871525498;
                    break '_b;
                }
            }
            _ => {
                x += 1 as ::core::ffi::c_int;
            }
        }
        x += 2 as ::core::ffi::c_int;
        current_block = 197541242141302941;
    }
    loop {
        match current_block {
            197541242141302941 => {
                if x != 0 {
                    current_block = 3760217419871525498;
                    continue;
                }
                return x;
            }
            _ => {
                if x != 0 {
                    current_block = 197541242141302941;
                    continue;
                }
                return x;
            }
        }
    }
}
