c2rust-transpile/tests/snapshots/snapshots__transpile@keywords.c.2024.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/keywords.2024.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
#[unsafe(export_name = "as")]
pub unsafe extern "C" fn r#as() {}
#[unsafe(export_name = "async")]
pub unsafe extern "C" fn r#async() {}
#[unsafe(export_name = "await")]
pub unsafe extern "C" fn r#await() {}
#[unsafe(export_name = "crate")]
pub unsafe extern "C" fn crate_0() {}
#[unsafe(export_name = "dyn")]
pub unsafe extern "C" fn r#dyn() {}
#[unsafe(export_name = "false")]
pub unsafe extern "C" fn r#false() {}
#[unsafe(export_name = "fn")]
pub unsafe extern "C" fn r#fn() {}
#[unsafe(export_name = "impl")]
pub unsafe extern "C" fn r#impl() {}
#[unsafe(export_name = "in")]
pub unsafe extern "C" fn r#in() {}
#[unsafe(export_name = "let")]
pub unsafe extern "C" fn r#let() {}
#[unsafe(export_name = "loop")]
pub unsafe extern "C" fn r#loop() {}
#[unsafe(export_name = "match")]
pub unsafe extern "C" fn r#match() {}
#[unsafe(export_name = "mod")]
pub unsafe extern "C" fn r#mod() {}
#[unsafe(export_name = "move")]
pub unsafe extern "C" fn r#move() {}
#[unsafe(export_name = "mut")]
pub unsafe extern "C" fn r#mut() {}
#[unsafe(export_name = "pub")]
pub unsafe extern "C" fn r#pub() {}
#[unsafe(export_name = "ref")]
pub unsafe extern "C" fn r#ref() {}
#[unsafe(export_name = "self")]
pub unsafe extern "C" fn self_0() {}
#[unsafe(export_name = "Self")]
pub unsafe extern "C" fn Self_0() {}
#[unsafe(export_name = "super")]
pub unsafe extern "C" fn super_0() {}
#[unsafe(export_name = "trait")]
pub unsafe extern "C" fn r#trait() {}
#[unsafe(export_name = "true")]
pub unsafe extern "C" fn r#true() {}
#[unsafe(export_name = "type")]
pub unsafe extern "C" fn r#type() {}
#[unsafe(export_name = "unsafe")]
pub unsafe extern "C" fn r#unsafe() {}
#[unsafe(export_name = "use")]
pub unsafe extern "C" fn r#use() {}
#[unsafe(export_name = "where")]
pub unsafe extern "C" fn r#where() {}
#[unsafe(export_name = "abstract")]
pub unsafe extern "C" fn r#abstract() {}
#[unsafe(export_name = "become")]
pub unsafe extern "C" fn r#become() {}
#[unsafe(export_name = "box")]
pub unsafe extern "C" fn r#box() {}
#[unsafe(export_name = "final")]
pub unsafe extern "C" fn r#final() {}
#[unsafe(export_name = "gen")]
pub unsafe extern "C" fn r#gen() {}
#[unsafe(export_name = "macro")]
pub unsafe extern "C" fn r#macro() {}
#[unsafe(export_name = "override")]
pub unsafe extern "C" fn r#override() {}
#[unsafe(export_name = "priv")]
pub unsafe extern "C" fn r#priv() {}
#[unsafe(export_name = "try")]
pub unsafe extern "C" fn r#try() {}
#[unsafe(export_name = "unsized")]
pub unsafe extern "C" fn r#unsized() {}
#[unsafe(export_name = "virtual")]
pub unsafe extern "C" fn r#virtual() {}
#[unsafe(export_name = "yield")]
pub unsafe extern "C" fn r#yield() {}
