c2rust-transpile/tests/snapshots/snapshots__transpile@keywords.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/keywords.rs
input_file: c2rust-transpile/tests/snapshots/keywords.c
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#[export_name = "as"]
pub unsafe extern "C" fn as_0() {}
#[export_name = "async"]
pub unsafe extern "C" fn async_0() {}
#[export_name = "crate"]
pub unsafe extern "C" fn crate_0() {}
#[export_name = "dyn"]
pub unsafe extern "C" fn dyn_0() {}
#[export_name = "false"]
pub unsafe extern "C" fn false_0() {}
#[export_name = "fn"]
pub unsafe extern "C" fn fn_0() {}
#[export_name = "impl"]
pub unsafe extern "C" fn impl_0() {}
#[export_name = "in"]
pub unsafe extern "C" fn in_0() {}
#[export_name = "let"]
pub unsafe extern "C" fn let_0() {}
#[export_name = "loop"]
pub unsafe extern "C" fn loop_0() {}
#[export_name = "match"]
pub unsafe extern "C" fn match_0() {}
#[export_name = "mod"]
pub unsafe extern "C" fn mod_0() {}
#[export_name = "move"]
pub unsafe extern "C" fn move_0() {}
#[export_name = "mut"]
pub unsafe extern "C" fn mut_0() {}
#[export_name = "pub"]
pub unsafe extern "C" fn pub_0() {}
#[export_name = "ref"]
pub unsafe extern "C" fn ref_0() {}
#[export_name = "self"]
pub unsafe extern "C" fn self_0() {}
#[export_name = "Self"]
pub unsafe extern "C" fn Self_0() {}
#[export_name = "super"]
pub unsafe extern "C" fn super_0() {}
#[export_name = "trait"]
pub unsafe extern "C" fn trait_0() {}
#[export_name = "true"]
pub unsafe extern "C" fn true_0() {}
#[export_name = "type"]
pub unsafe extern "C" fn type_0() {}
#[export_name = "unsafe"]
pub unsafe extern "C" fn unsafe_0() {}
#[export_name = "use"]
pub unsafe extern "C" fn use_0() {}
#[export_name = "where"]
pub unsafe extern "C" fn where_0() {}
#[export_name = "abstract"]
pub unsafe extern "C" fn abstract_0() {}
#[export_name = "become"]
pub unsafe extern "C" fn become_0() {}
#[export_name = "box"]
pub unsafe extern "C" fn box_0() {}
#[export_name = "final"]
pub unsafe extern "C" fn final_0() {}
#[no_mangle]
pub unsafe extern "C" fn gen() {}
#[export_name = "macro"]
pub unsafe extern "C" fn macro_0() {}
#[export_name = "override"]
pub unsafe extern "C" fn override_0() {}
#[export_name = "priv"]
pub unsafe extern "C" fn priv_0() {}
#[export_name = "try"]
pub unsafe extern "C" fn try_0() {}
#[export_name = "unsized"]
pub unsafe extern "C" fn unsized_0() {}
#[export_name = "virtual"]
pub unsafe extern "C" fn virtual_0() {}
#[export_name = "yield"]
pub unsafe extern "C" fn yield_0() {}
#[no_mangle]
pub unsafe extern "C" fn Copy() {}
#[no_mangle]
pub unsafe extern "C" fn Send() {}
#[no_mangle]
pub unsafe extern "C" fn Sized() {}
#[no_mangle]
pub unsafe extern "C" fn Sync() {}
#[no_mangle]
pub unsafe extern "C" fn Drop() {}
#[no_mangle]
pub unsafe extern "C" fn Fn() {}
#[no_mangle]
pub unsafe extern "C" fn FnMut() {}
#[no_mangle]
pub unsafe extern "C" fn FnOnce() {}
#[no_mangle]
pub unsafe extern "C" fn Box() {}
#[no_mangle]
pub unsafe extern "C" fn ToOwned() {}
#[no_mangle]
pub unsafe extern "C" fn Clone() {}
#[no_mangle]
pub unsafe extern "C" fn PartialEq() {}
#[no_mangle]
pub unsafe extern "C" fn PartialOrd() {}
#[no_mangle]
pub unsafe extern "C" fn Eq() {}
#[no_mangle]
pub unsafe extern "C" fn Ord() {}
#[no_mangle]
pub unsafe extern "C" fn AsRef() {}
#[no_mangle]
pub unsafe extern "C" fn AsMut() {}
#[no_mangle]
pub unsafe extern "C" fn Into() {}
#[no_mangle]
pub unsafe extern "C" fn From() {}
#[no_mangle]
pub unsafe extern "C" fn Default() {}
#[no_mangle]
pub unsafe extern "C" fn Iterator() {}
#[no_mangle]
pub unsafe extern "C" fn Extend() {}
#[no_mangle]
pub unsafe extern "C" fn IntoIterator() {}
#[no_mangle]
pub unsafe extern "C" fn DoubleEndedIterator() {}
#[no_mangle]
pub unsafe extern "C" fn ExactSizeIterator() {}
#[no_mangle]
pub unsafe extern "C" fn Option() {}
#[no_mangle]
pub unsafe extern "C" fn Result() {}
#[no_mangle]
pub unsafe extern "C" fn SliceConcatExt() {}
#[no_mangle]
pub unsafe extern "C" fn String() {}
#[no_mangle]
pub unsafe extern "C" fn ToString() {}
#[no_mangle]
pub unsafe extern "C" fn Vec() {}
#[no_mangle]
pub unsafe extern "C" fn bool() {}
#[no_mangle]
pub unsafe extern "C" fn f32() {}
#[no_mangle]
pub unsafe extern "C" fn f64() {}
#[no_mangle]
pub unsafe extern "C" fn i8() {}
#[no_mangle]
pub unsafe extern "C" fn i16() {}
#[no_mangle]
pub unsafe extern "C" fn i32() {}
#[no_mangle]
pub unsafe extern "C" fn i64() {}
#[no_mangle]
pub unsafe extern "C" fn i128() {}
#[no_mangle]
pub unsafe extern "C" fn isize() {}
#[no_mangle]
pub unsafe extern "C" fn u8() {}
#[no_mangle]
pub unsafe extern "C" fn u16() {}
#[no_mangle]
pub unsafe extern "C" fn u32() {}
#[no_mangle]
pub unsafe extern "C" fn u64() {}
#[no_mangle]
pub unsafe extern "C" fn u128() {}
#[no_mangle]
pub unsafe extern "C" fn usize() {}
#[no_mangle]
pub unsafe extern "C" fn str() {}
